Prevent layout shift

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -73,8 +73,6 @@ body.dark {
     margin: 0 1vh 1vh 0;
 
     a {
-      text-indent: -9999px;
-      white-space: nowrap;
       display: inline-block;
     }
 
